fixed margin spacing with image

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -26,10 +26,10 @@
 }
 
 .subheader {
-  color: #594fd1;
-  font-size: 13px;
-  margin-top: 7px;
-  font-weight: normal;
+    color: #594FD1;
+    font-size: 13px;
+    margin-top: 7px;
+    font-weight: normal;
 }
 
 .header {
